# oop

./: CMakeLists.txt
lab1/: CMakeLists.txt  main.cpp
lab1/include/: convertTo24HourFormat.h  parse12HourFormat.h
lab1/src/: convertTo24HourFormat.cpp  parse12HourFormat.cpp
lab1/tests/: test_time.cpp
lab2/include/: three.hpp
lab2/src/: three.cpp
